[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "feedparser>=6.0.12",
    "modules>=1.0.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "streamlit>=1.49.1",
    "textblob>=0.19.0",
    "yfinance>=0.2.66",
]
